barcode generator works now

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -395,7 +395,7 @@
             <item>
              <widget class="QPushButton" name="barcode_button">
               <property name="text">
-               <string>w/ Barcodes</string>
+               <string>Barcode</string>
               </property>
              </widget>
             </item>
@@ -413,9 +413,18 @@
              </spacer>
             </item>
             <item>
-             <widget class="QLabel" name="label">
+             <widget class="QLabel" name="barcode_view">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="text">
-               <string>TextLabel</string>
+               <string/>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignmentFlag::AlignCenter</set>
               </property>
              </widget>
             </item>
