--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -386,6 +386,20 @@
              <number>5</number>
             </property>
             <item>
+             <widget class="QPushButton" name="priceChange_button">
+              <property name="text">
+               <string>Change Price</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="qtyChange_button">
+              <property name="text">
+               <string>Change Qty</string>
+              </property>
+             </widget>
+            </item>
+            <item>
              <widget class="QPushButton" name="receipt_button">
               <property name="text">
                <string>Receipt</string>
@@ -518,7 +532,7 @@
             <item>
              <widget class="QTableWidget" name="ticketview">
               <property name="columnCount">
-               <number>4</number>
+               <number>5</number>
               </property>
               <column>
                <property name="text">
@@ -541,6 +555,11 @@
               <column>
                <property name="text">
                 <string>Price</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>tag</string>
                </property>
               </column>
              </widget>
@@ -681,7 +700,25 @@
      <height>24</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuAdjust_Tax">
+    <property name="title">
+     <string>settings</string>
+    </property>
+    <addaction name="actionSales_Tax"/>
+    <addaction name="actionLocate_Database"/>
+   </widget>
+   <addaction name="menuAdjust_Tax"/>
   </widget>
+  <action name="actionSales_Tax">
+   <property name="text">
+    <string>Sales Tax</string>
+   </property>
+  </action>
+  <action name="actionLocate_Database">
+   <property name="text">
+    <string>Locate Database</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
