--- a/icons.qrc
+++ b/icons.qrc
@@ -1,10 +1,13 @@
 <RCC>
     <qresource prefix="/">
-        <file>icons/app_icon_16.png</file>
-        <file>icons/app_icon_32.png</file>
-        <file>icons/app_icon_48.png</file>
-        <file>icons/app_icon_64.png</file>
-        <file>icons/app_icon_128.png</file>
-        <file>icons/app_icon_256.png</file>
+        <file>icons/icon_16x16.png</file>
+        <file>icons/icon_32x32.png</file>
+        <file>icons/icon_48x48.png</file>
+        <file>icons/icon_128x128.png</file>
+        <file>icons/icon_64x64.png</file>
+        <file>icons/icon_256x256.png</file>
+        <file>icons/icon_512x512.png</file>
+        <file>icons/icon_1024x1024.png</file>
+        <file>icons/AppIcon.icns</file>
     </qresource>
 </RCC>
