--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -58,7 +58,7 @@
            <number>10</number>
           </property>
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout">
+           <layout class="QVBoxLayout" name="Keypad_layout">
             <property name="sizeConstraint">
              <enum>QLayout::SizeConstraint::SetFixedSize</enum>
             </property>
@@ -72,7 +72,7 @@
               </property>
               <property name="font">
                <font>
-                <pointsize>20</pointsize>
+                <pointsize>30</pointsize>
                 <bold>true</bold>
                </font>
               </property>
@@ -479,6 +479,15 @@
              <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
             </property>
             <item>
+             <widget class="QLineEdit" name="code_inputBox_2">
+              <property name="font">
+               <font>
+                <pointsize>30</pointsize>
+               </font>
+              </property>
+             </widget>
+            </item>
+            <item>
              <layout class="QHBoxLayout" name="horizontalLayout_3">
               <property name="leftMargin">
                <number>10</number>
@@ -755,7 +764,14 @@
     </property>
     <addaction name="actionSettings"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="action_HideKeypad"/>
+   </widget>
    <addaction name="menuAdjust_Tax"/>
+   <addaction name="menuView"/>
   </widget>
   <action name="actionSales_Tax">
    <property name="text">
@@ -780,6 +796,20 @@
   <action name="actionSettings">
    <property name="text">
     <string>Settings</string>
+   </property>
+  </action>
+  <action name="action_HideKeypad">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Hide Keypad</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+K</string>
+   </property>
+   <property name="shortcutVisibleInContextMenu">
+    <bool>true</bool>
    </property>
   </action>
  </widget>
