--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -21,16 +21,16 @@
     <item>
      <widget class="QTabWidget" name="app_pageview">
       <property name="focusPolicy">
-       <enum>Qt::FocusPolicy::NoFocus</enum>
+       <enum>Qt::NoFocus</enum>
       </property>
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
       <property name="tabPosition">
-       <enum>QTabWidget::TabPosition::North</enum>
+       <enum>QTabWidget::North</enum>
       </property>
       <property name="tabShape">
-       <enum>QTabWidget::TabShape::Rounded</enum>
+       <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
        <number>0</number>
@@ -43,7 +43,7 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="3,0,0,0,3">
           <property name="sizeConstraint">
-           <enum>QLayout::SizeConstraint::SetMaximumSize</enum>
+           <enum>QLayout::SetDefaultConstraint</enum>
           </property>
           <property name="leftMargin">
            <number>10</number>
@@ -60,7 +60,7 @@
           <item>
            <layout class="QVBoxLayout" name="Keypad_layout">
             <property name="sizeConstraint">
-             <enum>QLayout::SizeConstraint::SetFixedSize</enum>
+             <enum>QLayout::SetDefaultConstraint</enum>
             </property>
             <item>
              <widget class="QLineEdit" name="code_inputBox">
@@ -78,9 +78,6 @@
               </property>
               <property name="autoFillBackground">
                <bool>false</bool>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignmentFlag::AlignCenter</set>
               </property>
               <property name="placeholderText">
                <string extracomment="UPC"/>
@@ -382,7 +379,7 @@
           <item>
            <widget class="Line" name="line">
             <property name="orientation">
-             <enum>Qt::Orientation::Vertical</enum>
+             <enum>Qt::Vertical</enum>
             </property>
            </widget>
           </item>
@@ -441,7 +438,7 @@
             <item>
              <spacer name="verticalSpacer">
               <property name="orientation">
-               <enum>Qt::Orientation::Vertical</enum>
+               <enum>Qt::Vertical</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
@@ -462,9 +459,6 @@
               <property name="text">
                <string/>
               </property>
-              <property name="alignment">
-               <set>Qt::AlignmentFlag::AlignCenter</set>
-              </property>
              </widget>
             </item>
             <item>
@@ -479,14 +473,14 @@
           <item>
            <widget class="Line" name="line_2">
             <property name="orientation">
-             <enum>Qt::Orientation::Vertical</enum>
+             <enum>Qt::Vertical</enum>
             </property>
            </widget>
           </item>
           <item>
            <layout class="QVBoxLayout" name="ticket_layout_frame">
             <property name="sizeConstraint">
-             <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
+             <enum>QLayout::SetDefaultConstraint</enum>
             </property>
             <item>
              <widget class="QLineEdit" name="code_inputBox_2">
@@ -521,7 +515,7 @@
                  </font>
                 </property>
                 <property name="frameShape">
-                 <enum>QFrame::Shape::Box</enum>
+                 <enum>QFrame::NoFrame</enum>
                 </property>
                 <property name="lineWidth">
                  <number>2</number>
@@ -548,16 +542,13 @@
                  <bool>false</bool>
                 </property>
                 <property name="frameShape">
-                 <enum>QFrame::Shape::Box</enum>
+                 <enum>QFrame::NoFrame</enum>
                 </property>
                 <property name="lineWidth">
                  <number>2</number>
                 </property>
                 <property name="text">
                  <string>Total: $0.00</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
                 </property>
                </widget>
               </item>
@@ -566,10 +557,10 @@
             <item>
              <widget class="QTableWidget" name="ticketview">
               <property name="focusPolicy">
-               <enum>Qt::FocusPolicy::StrongFocus</enum>
+               <enum>Qt::NoFocus</enum>
               </property>
               <property name="selectionMode">
-               <enum>QAbstractItemView::SelectionMode::ExtendedSelection</enum>
+               <enum>QAbstractItemView::NoSelection</enum>
               </property>
               <property name="columnCount">
                <number>5</number>
@@ -656,7 +647,7 @@
            </widget>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_4">
+           <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,3">
             <property name="leftMargin">
              <number>5</number>
             </property>
@@ -693,7 +684,7 @@
               <item>
                <spacer name="verticalSpacer_2">
                 <property name="orientation">
-                 <enum>Qt::Orientation::Vertical</enum>
+                 <enum>Qt::Vertical</enum>
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
@@ -722,7 +713,7 @@
               <item>
                <widget class="QTableWidget" name="foundView">
                 <property name="selectionBehavior">
-                 <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
+                 <enum>QAbstractItemView::SelectItems</enum>
                 </property>
                 <attribute name="horizontalHeaderVisible">
                  <bool>false</bool>
@@ -765,7 +756,7 @@
      <x>0</x>
      <y>0</y>
      <width>1211</width>
-     <height>24</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuAdjust_Tax">
@@ -780,7 +771,14 @@
     </property>
     <addaction name="action_HideKeypad"/>
    </widget>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionOpen"/>
+   </widget>
    <addaction name="menuAdjust_Tax"/>
+   <addaction name="menuFile"/>
    <addaction name="menuView"/>
   </widget>
   <action name="actionSales_Tax">
@@ -820,6 +818,14 @@
    </property>
    <property name="shortcutVisibleInContextMenu">
     <bool>true</bool>
+   </property>
+  </action>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
    </property>
   </action>
  </widget>
